Alterei nome e adicionei campo

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Meu site</title>
 </head>
 <body>
-    <h1>Meu site</h1>
-    <h2>Veja nosso novo logo</h2>
+    <h1>Site da empresa</h1>
+    <input type="Name">
     <img/>
 </body>
 </html>
