Alterei mais coisas

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Meu site</h1>
     <h2>Veja nosso novo logo</h2>
+    <p>Veja essa imagem</p>
+    <img/>
     <img/>
 </body>
 </html>
